- corrected guiding principle section placement of box in banner - added media query to reduce size of spacing between nav items with width change

--- a/sass/layout/layout.module.scss
+++ b/sass/layout/layout.module.scss
@@ -121,6 +121,10 @@
     gap: 15rem;
     font-weight: $font-weight-xs;
 
+    @include media-queries(tab-lg-land) {
+      gap: 12rem;
+    }
+
     @include media-queries(tab-land) {
       flex-direction: column;
       gap: 8rem;
